// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete dynamic behavior on focus 1`] = `
<ul
  class="relative list-none outline-none py-2 px-0 m-0 rounded-sm bg-white shadow-5"
  data-testid="scroll-menu"
  role="menu"
  tabindex="-1"
>
  <div
    tabindex="0"
  >
    <div
      class="overflow-y max-h [@media(max-height:585px)]:max-h-[calc(50vh [@media(max-height:585px)]:md:max-h-[calc(50vh"
    >
      <li
        aria-disabled="false"
        aria-selected="true"
        class="text-black bg-blue hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-0"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <span
                class="flex-1 text-md leading-5"
              >
                Belarus
              </span>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-1"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <span
                class="flex-1 text-md leading-5"
              >
                Croatia
              </span>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-2"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <span
                class="flex-1 text-md leading-5"
              >
                Lithuania
              </span>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-3"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <span
                class="flex-1 text-md leading-5"
              >
                Slovakia
              </span>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-4"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <span
                class="flex-1 text-md leading-5"
              >
                Ukraine
              </span>
            </div>
          </div>
        </div>
      </li>
    </div>
  </div>
</ul>
`;

exports[`Autocomplete dynamic behavior renders custom other options 1`] = `
<div
  data-testid="my-other-option"
>
  Other option!
</div>
`;

exports[`Autocomplete dynamic behavior renders custom other options text and calls onOtherOptionSelect when selected 1`] = `
<li
  aria-disabled="false"
  aria-selected="false"
  class="text-black bg-transparent hover:bg-blue focus:bg-blue py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4 px-4 border-gray border-solid border-0 border-t"
  data-testid="other-option"
  role="option"
  tabindex="-1"
>
  <div
    class="flex flex-1 max-w"
  >
    <div
      class="flex flex-col flex-1 min-w"
    >
      <div
        class="flex items-center"
      >
        <span
          class="m-0 text-sm text-black font-regular"
        >
          <span
            class="m-0 font-inherit leading-[1.5em] text-graphite font-regular"
          >
            my option:
          </span>
          Other option!
        </span>
      </div>
    </div>
  </div>
</li>
`;

exports[`Autocomplete dynamic behavior renders other option with default text 1`] = `
<li
  aria-disabled="false"
  aria-selected="false"
  class="text-black bg-transparent hover:bg-blue focus:bg-blue py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4 px-4 border-gray border-solid border-0 border-t"
  data-testid="other-option"
  role="option"
  tabindex="-1"
>
  <div
    class="flex flex-1 max-w"
  >
    <div
      class="flex flex-col flex-1 min-w"
    >
      <div
        class="flex items-center"
      >
        <span
          class="m-0 text-sm text-black font-regular"
        >
          <span
            class="m-0 font-inherit leading-[1.5em] text-graphite font-regular"
          >
            Other option: 
          </span>
          Other option!
        </span>
      </div>
    </div>
  </div>
</li>
`;

exports[`Autocomplete static behavior renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="relative w-[18.75rem]"
      role="combobox"
    >
      <div
        class="flex"
      >
        <div
          class="base-Input base-Input base-Input relative inline-flex gap-y gap-x items-center rounded-sm [font-size:_unset] group text-nowrap p-2 h-8 w-[18.75rem] bg-white after:content-[""] after:inline-block after:absolute after:top-0 after:bottom-0 after:right-0 after:left-0 after:pointer-events after:border-solid after:rounded-sm after:border-gray [&:has(:focus)]:after:border-blue after:border [&:has(:focus)]:after:shadow-[0_0_0_3px] [&:has(:focus)]:after:shadow-blue hover:[&:not(:has(:focus))]:after:border-gray text-black cursor-[inherit]"
        >
          <input
            aria-autocomplete="list"
            aria-invalid="false"
            autocomplete="off"
            class="base-Input [&::-webkit-calendar-picker-indicator]:bg bg-transparent border-none box-border cursor-[inherit] h-full outline-none p-0 peer resize-none w-full text-md leading-4 text-black [&::placeholder]:text-gray [&::placeholder]:opacity-100"
            data-testid="autocomplete"
            type="text"
            value=""
          />
          <div
            class="text-graphite h-auto flex items-center whitespace-nowrap max-h justify-end ml-auto flex-grow flex-shrink basis-auto invisible"
            data-testid="reset-adornment"
          >
            <button
              aria-disabled="false"
              class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [[data-component-type="button"]+&]:ml cursor-pointer rounded-full p-0 w-[1.5em] h-[1.5em] border-none text-graphite hover:bg-gray active:bg-gray focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] bg-transparent"
              data-component-type="button"
              role="reset"
              tabindex="-1"
              type="button"
            >
              <span
                class="items-center inline-flex font-semibold whitespace-nowrap text-button"
              >
                <svg
                  class="fill-current inline-block text-inherit h-[1em] align-[-.125em] text-[1.2em] flex-1"
                  style="min-width: 16px; min-height: 16px;"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="m8.707 8 3.5 3.5-.707.707-3.5-3.5-3.5 3.5-.707-.707 3.5-3.5-3.5-3.5.707-.707 3.5 3.5 3.5-3.5.707.707-3.5 3.5Z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete static behavior renders a loading indicator 1`] = `
<div
  class="text-graphite h-auto flex items-center whitespace-nowrap max-h justify-end ml-auto flex-grow flex-shrink basis-auto pointer-events"
  data-testid="loading-adornment"
>
  <div
    class="text-lg flex flex-col items-center"
  >
    <div
      aria-valuenow="35"
      class="text-blue transform -rotate"
      role="progressbar"
      style="width: 16px; height: 16px;"
    >
      <svg
        class="block"
        viewBox="22 22 44 44"
      >
        <circle
          class="transition-all stroke-[currentColor]"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-dasharray="80px, 200px"
          stroke-dashoffset="0px"
          stroke-width="3.6"
          style="stroke-dashoffset: 82.498px; stroke-dasharray: 126.920;"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Autocomplete static behavior renders custom display value 1`] = `
<ul
  class="relative list-none outline-none py-2 px-0 m-0 rounded-sm bg-white shadow-5"
  data-testid="scroll-menu"
  role="menu"
  tabindex="-1"
>
  <div
    tabindex="0"
  >
    <div
      class="overflow-y max-h [@media(max-height:585px)]:max-h-[calc(50vh [@media(max-height:585px)]:md:max-h-[calc(50vh"
    >
      <li
        aria-disabled="false"
        aria-selected="true"
        class="text-black bg-blue hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-0"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <span
                class="flex-1 text-md leading-5"
              >
                BelarusBY
              </span>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-1"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <span
                class="flex-1 text-md leading-5"
              >
                CroatiaHR
              </span>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-2"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <span
                class="flex-1 text-md leading-5"
              >
                LithuaniaLU
              </span>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-3"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <span
                class="flex-1 text-md leading-5"
              >
                SlovakiaSK
              </span>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-4"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <span
                class="flex-1 text-md leading-5"
              >
                UkraineUA
              </span>
            </div>
          </div>
        </div>
      </li>
    </div>
  </div>
</ul>
`;

exports[`Autocomplete static behavior renders custom options with custom keys 1`] = `
<ul
  class="relative list-none outline-none py-2 px-0 m-0 rounded-sm bg-white shadow-5"
  data-testid="scroll-menu"
  role="menu"
  tabindex="-1"
>
  <div
    tabindex="0"
  >
    <div
      class="overflow-y max-h [@media(max-height:585px)]:max-h-[calc(50vh [@media(max-height:585px)]:md:max-h-[calc(50vh"
    >
      <li
        aria-disabled="false"
        aria-selected="true"
        class="text-black bg-blue hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-0"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <div
                data-testid="custom-option"
              >
                BY
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-1"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <div
                data-testid="custom-option"
              >
                HR
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-2"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <div
                data-testid="custom-option"
              >
                LU
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-3"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <div
                data-testid="custom-option"
              >
                SK
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
        data-testid="menu-item-4"
        role="option"
        tabindex="-1"
      >
        <div
          class="flex flex-1 max-w"
        >
          <div
            class="flex flex-col flex-1 min-w"
          >
            <div
              class="flex items-center"
            >
              <div
                data-testid="custom-option"
              >
                UA
              </div>
            </div>
          </div>
        </div>
      </li>
    </div>
  </div>
</ul>
`;

exports[`Autocomplete static behavior uses a custom popper container 1`] = `
<input
  aria-autocomplete="list"
  aria-invalid="false"
  autocomplete="off"
  class="base-Input [&::-webkit-calendar-picker-indicator]:bg bg-transparent border-none box-border cursor-[inherit] h-full outline-none p-0 peer resize-none w-full text-md leading-4 text-black [&::placeholder]:text-gray [&::placeholder]:opacity-100"
  data-testid="autocomplete"
  type="text"
  value=""
/>
`;
